--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>練習11</title>
   </head>
   <body>
-    <h1>ニコモジ</h1>
+    <script type="text/javascript" src="js/default.js"></script>
   </body>
 </html>
