--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <script type="text/javascript" src="js/default.js"></script>
     
     <section>
-      <p id="choice">'ここに日時を表示する'</p>
+      <p id="choice">'ここに結果を表示する'</p>
     </section>
   </body>
 </html>
